# Sci.NET

./: .gitignore  .gitmodules  CMakeLists.txt  GitVersion.yml  LICENSE  NuGet.config  README.md  Sci.NET.sln  Sci.NET.sln.DotSettings  build-dev.cmd  build-release.cmd  build.cmd  global.json  readme.md  sci.net.snk
.github/workflows/: ci.yml  sonarcloud.yml
Samples/Basics.Arithmetic/: Basics.Arithmetic.csproj  Program.cs
Samples/Basics.MatrixMultiply/: Basics.MatrixMultiply.csproj  Program.cs
Samples/Basics.Reduction/: Basics.Reduction.csproj  Program.cs
eng/: Build.ps1  Generate-Solution.ps1  build.ps1  dotnet-install.ps1
eng/Sci.NET.CudaDownloaderTool/: Sci.NET.CudaDownloaderTool.sln
eng/build-props/: AddAnalyzers.props  AddCommonTestNugetPackages.props  MakeInternalsVisibleToTestProjects.props
eng/pipelines/: cd-dev.yml  ci.yml  pipeline.yml  sync-git-repo.yml
examples/: Directory.Build.props  Directory.Packages.props
examples/Sci.NET.Examples.MNIST/: Program.cs  Sci.NET.Examples.MNIST.csproj
examples/Sci.NET.Examples.Random/: Program.cs  Sci.NET.Examples.Random.csproj
src/: CMakeLists.txt  Directory.Build.props  Directory.Packages.props
src/Sci.NET.Accelerators/: DeviceCompiler.cs  ICompiledKernel.cs  IDeviceCompiler.cs  KernelCacheEntry.cs  Sci.NET.Accelerators.csproj  readme.md
src/Sci.NET.Accelerators.IntegrationTests/: Sci.NET.Accelerators.IntegrationTests.csproj
src/Sci.NET.Accelerators.SourceGenerator/: AnalyzerReleases.Unshipped.md  SampleIncrementalSourceGenerator.cs  Sci.NET.Accelerators.SourceGenerator.csproj  assembly.cs
src/Sci.NET.Accelerators.SourceGenerator.Tests/: Sci.NET.Accelerators.SourceGenerator.Tests.csproj
src/Sci.NET.Accelerators.SourceGenerators/: KernelSourceGenerator.cs  Sci.NET.Accelerators.SourceGenerators.csproj
src/Sci.NET.Accelerators.UnitTests/: EndToEndTest.cs  Sci.NET.Accelerators.UnitTests.csproj
src/Sci.NET.BLAS/: IBlasProvider.cs  NativeMethods.cs  Sci.NET.BLAS.csproj
src/Sci.NET.BLAS.Native/: CMakeLists.txt
src/Sci.NET.BLAS.Native.CPU/: CMakeLists.txt
src/Sci.NET.BLAS.Native.CPU/src/: c_api.cpp
src/Sci.NET.BLAS.Native.CPU/src/kernels/: matmul.cpp  matmul.h
src/Sci.NET.BLAS.Native.CPU/src/storage/: memory_allocator.cpp
src/Sci.NET.BLAS.Native.CUDA/: CMakeLists.txt
src/Sci.NET.BLAS.Native.CUDA/src/: c_api.cpp
src/Sci.NET.BLAS.Native.CUDA/src/storage/: matrix_allocator.cpp
src/Sci.NET.Benchmarks/: Program.cs  Sci.NET.Benchmarks.csproj
src/Sci.NET.CUDA/: CudaDeviceProperties.cs  Sci.NET.CUDA.csproj  readme.md
src/Sci.NET.CUDA.Native/: CMakeLists.txt
src/Sci.NET.CUDA.Native/include/: cuda_settings.h  utils.h
src/Sci.NET.CUDA.Native/src/: cuda_settings.cpp
src/Sci.NET.CUDA.Native/src/mathematics/: cuda_arithmetic.cpp  cuda_arithmetic.h  cuda_inner_product.cpp  cuda_inner_product.h  cuda_matrix_multiply.cpp  cuda_matrix_multiply.h  cuda_random.cpp  cuda_random.h  cuda_trigonometry.cpp  cuda_trigonometry.h
src/Sci.NET.CUDA.Native/src/mathematics/kernels/: arithmetic_kernels.cu  arithmetic_kernels.cuh  inner_product_kernels.cu  inner_product_kernels.cuh  matrix_multiply_kernels.cu  matrix_multiply_kernels.cuh  random_kernels.cu  random_kernels.cuh  trigonometry_kernels.cu  trigonometry_kernels.cuh
src/Sci.NET.CUDA.Native/src/memory/: cuda_memory_api.cpp  cuda_memory_api.h
src/Sci.NET.CUDA.Native/tests/mathematics/: cuda_matrix_multiply_tests.cpp  cuda_random_tests.cpp
src/Sci.NET.CUDA.Native/tests/mathematics/add/: cuda_add_tensor_broadcast_tensor_tests.cpp  cuda_add_tensor_tensor_tests.cpp
src/Sci.NET.CUDA.Redist-Linux-x64/: Sci.NET.CUDA.Redist-Linux-x64.csproj
src/Sci.NET.CUDA.Redist-Win64/: Sci.NET.CUDA.Redist-Win64.csproj
src/Sci.NET.CUDA.Redist-linux-x86-64/: Sci.NET.CUDA.Redist-linux-x86-64.csproj  Sci.NET.CUDA.Redist-linux-x86-64.proj  readme.md
src/Sci.NET.CUDA.Redist-windows-x86-64/: Sci.NET.CUDA.Redist-windows-x86-64.csproj  Sci.NET.CUDA.Redist-windows-x86-64.proj  readme.md
src/Sci.NET.CUDA.UnitTests/: Sci.NET.CUDA.UnitTests.csproj  UnitTest1.cs
src/Sci.NET.Common/: Dim3.cs  Sci.NET.Common.csproj  SizeT.cs  readme.md
src/Sci.NET.Common.UnitTests/: Sci.NET.Common.UnitTests.csproj  SizeTTests.cs
src/Sci.NET.Datasets/: IDataset.cs  Sci.NET.Datasets.csproj  readme.md
src/Sci.NET.Datasets.MNIST/: Sci.NET.Datasets.MNIST.csproj  readme.md
src/Sci.NET.Datasets.MNIST.UnitTests/: MnistTests.cs  Sci.NET.Datasets.MNIST.UnitTests.csproj
src/Sci.NET.Datasets.UnitTests/: Sci.NET.Datasets.UnitTests.csproj
src/Sci.NET.DeepLearning/: ISequentialNetwork.cs  NeuralNetwork.cs  Sci.NET.DeepLearning.csproj
src/Sci.NET.DeepLearning.UnitTests/: Sci.NET.DeepLearning.UnitTests.csproj
src/Sci.NET.Images/: Image.cs  ImageLoader.cs  Sci.NET.Images.csproj  readme.md
src/Sci.NET.Images.UnitTests/: ImageLoaderTests.cs  Sci.NET.Images.UnitTests.csproj
src/Sci.NET.LinearAlgebra.Native/: CMakeLists.txt
src/Sci.NET.LinearAlgebra.Native.CPU/: CMakeLists.txt
src/Sci.NET.LinearAlgebra.Native.CUDA/: CMakeLists.txt
src/Sci.NET.LinearAlgebra.Native.CUDA/src/: c_api.cpp  nvjitlink_api.h
src/Sci.NET.LinearAlgebra.Native.CUDA/src/storage/: memory_allocator.cpp
src/Sci.NET.MachineLearning/: Sci.NET.MachineLearning.csproj  readme.md
src/Sci.NET.MachineLearning.UnitTests/: NetworkTests.cs  Sci.NET.MachineLearning.UnitTests.csproj
src/Sci.NET.Mathematics/: Sci.NET.Mathematics.csproj  SciDotNetConfiguration.cs  readme.md
src/Sci.NET.Mathematics.Benchmarks/: Dockerfile  Program.cs  Sci.NET.Mathematics.Benchmarks.csproj
src/Sci.NET.Mathematics.IntegrationTests/: Sci.NET.Mathematics.IntegrationTests.csproj
src/Sci.NET.Mathematics.UnitTests/: Sci.NET.Mathematics.UnitTests.csproj
src/Sci.NET.Media/: Sci.NET.Media.csproj
src/Sci.NET.Native/: CMakeLists.txt
src/Sci.NET.Native/include/: api.h  api_status_code.h
src/Sci.NET.Native/include/mathematics/: arithmetic.h  inner_product.h  matrix_multiply.h  memory_api.h  random.h  trigonometry.h
src/Sci.NET.Native/src/: api.cpp
src/Sci.NET.Test.Common/: Sci.NET.Test.Common.csproj
src/common/: BaseGlobalUsings.cs  (+1 more)
(+1003 files in other folders)
